Closed Bug 1471596 Opened 6 years ago Closed 6 years ago

HTMLEditor::GetSelectedOrParentTableElement: Value stored to 'selectedNode' is never read

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox63 --- fixed

People

(Reporter: Sylvestre, Assigned: Sylvestre)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Assignee: nobody → sledru
Comment on attachment 8988162 [details]
Bug 1471596 - Simplify the code in HTMLEditor::GetSelectedOrParentTableElement

https://reviewboard.mozilla.org/r/253424/#review260254
Attachment #8988162 - Flags: review?(m_kato) → review+
Pushed by sledru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1d892376d6f8
Simplify the code in HTMLEditor::GetSelectedOrParentTableElement r=m_kato
https://hg.mozilla.org/mozilla-central/rev/1d892376d6f8
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: