Bug 1471596 - Simplify the code in HTMLEditor::GetSelectedOrParentTableElement r=m_kato the first branch of the if was useless

MozReview-Commit-ID: GgKYOcI3sGX